--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "ffmpeg-static": "^5.2.0",
     "libsodium-wrappers": "^0.7.13",
+    "play-dl": "^1.9.7",
     "yt-search": "^2.11.0",
     "ytdl-core": "^4.11.5"
   }
